# Cognition_MCP

./: CLAUDE.md  README.md  main.py  pyproject.toml  run.sh
src/cognition_mcp/: goodreads.py  letterboxd.py  news.py  obsidian.py  server.py  storage.py
